- commit before switching the UniprotAcs to IntAct identifiers - a MockBlastClient was implemented - the FailureStrategy has still to be finalized - the testing for EBIApplicationError at the web service is still a ToDo

--- a/repo/bridges/trunk/intact-blast/pom.xml
+++ b/repo/bridges/trunk/intact-blast/pom.xml
@@ -36,7 +36,7 @@
 					</generatePackage>
 					<!-- <packageSpace>
 						uk.ac.ebi.intact.bridges.blast.generated
-					</packageSpace> -->
+						</packageSpace> -->
 					<testCases>false</testCases>
 					<serverSide>false</serverSide>
 					<subPackageByFileName>false</subPackageByFileName>
@@ -99,6 +99,12 @@
 			<groupId>javax.activation</groupId>
 			<artifactId>activation</artifactId>
 			<version>1.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.3.1</version>
 		</dependency>
 
 		<!-- for the blast h2 db -->
