--- a/repo/maven-plugins/fasta-maven-plugin/trunk/pom.xml
+++ b/repo/maven-plugins/fasta-maven-plugin/trunk/pom.xml
@@ -1,12 +1,15 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <parent>
         <groupId>uk.ac.ebi.intact.plugins</groupId>
         <artifactId>plugins-miscel</artifactId>
-        <version>1.6.0-SNAPSHOT</version>
+        <version>1.6.0-alpha</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
+
     <groupId>uk.ac.ebi.intact.plugins</groupId>
     <artifactId>fasta-maven-plugin</artifactId>
     <packaging>maven-plugin</packaging>
@@ -26,7 +29,7 @@
         <dependency>
             <groupId>uk.ac.ebi.intact.core</groupId>
             <artifactId>intact-persister</artifactId>
-            <version>1.6.2</version>
+            <version>1.7.2-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
