--- a/repo/maven-plugins/fasta-maven-plugin/trunk/pom.xml
+++ b/repo/maven-plugins/fasta-maven-plugin/trunk/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>uk.ac.ebi.intact.plugins</groupId>
         <artifactId>plugins-miscel</artifactId>
-        <version>1.6.0-alpha</version>
+        <version>1.6.0-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
