--- a/repo/bridges/trunk/intact-uniprot/pom.xml
+++ b/repo/bridges/trunk/intact-uniprot/pom.xml
@@ -44,12 +44,40 @@
             <artifactId>commons-lang</artifactId>
             <version>2.3</version>
         </dependency>
+
         <!-- UniProt Remote API -->
         <dependency>
             <groupId>uk.ac.ebi.uniprot.kraken</groupId>
             <artifactId>uniprotjapi</artifactId>
             <version>(10.5,]</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework</groupId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.springframework</groupId>
+                    <artifactId>spring-remoting</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.springframework</groupId>
+                    <artifactId>spring-aop</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.springframework</groupId>
+                    <artifactId>spring-beans</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.springframework</groupId>
+                    <artifactId>spring-core</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring</artifactId>
+            <version>2.5</version>
+        </dependency>
+
         <dependency>
             <groupId>uk.ac.ebi</groupId>
             <artifactId>sptr</artifactId>
