--- a/repo/bridges/trunk/intact-blast/pom.xml
+++ b/repo/bridges/trunk/intact-blast/pom.xml
@@ -116,7 +116,7 @@
 		<dependency>
 			<groupId>uk.ac.ebi.intact.bridges</groupId>
 			<artifactId>blast-mapping-parser</artifactId>
-			<version>${version}</version>
+			<version>2.0.2-SNAPSHOT</version>
 		</dependency>
 
 	</dependencies>
