--- a/repo/data-exchange/trunk/uniprot-export/intact-uniprot-export/src/test/resources/log4j.properties
+++ b/repo/data-exchange/trunk/uniprot-export/intact-uniprot-export/src/test/resources/log4j.properties
@@ -8,6 +8,7 @@ log4j.category.uk.ac.ebi.intact.model.IntactIdGenerator=INFO
 log4j.category.uk.ac.ebi.intact.model.IntactObjectEventListener=DEBUG
 log4j.category.uk.ac.ebi.intact.config.impl.AbstractHibernateDataConfig=DEBUG
 log4j.category.uk.ac.ebi.intact.context.impl.WebappSession=INFO
+log4j.category.uk.ac.ebi.intact.context.CvContext=WARN
 
 log4j.category.org.apache=INFO
 
@@ -39,7 +40,7 @@ log4j.category.org.hibernate.transaction=INFO
 #Log all JDBC resource acquisition
 log4j.category.org.hibernate.jdbc=INFO
 #Log HQL and SQL ASTs during query parsing
-log4j.category.org.hibernate.hql.ast.AST=DEBUG
+log4j.category.org.hibernate.hql.ast.AST=INFO
 #Log all JAAS authorization requests
 log4j.category.org.hibernate.secure=INFO
 
