--- a/repo/data-exchange/trunk/uniprot-export/intact-uniprot-export/pom.xml
+++ b/repo/data-exchange/trunk/uniprot-export/intact-uniprot-export/pom.xml
@@ -1,4 +1,6 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <parent>
         <groupId>uk.ac.ebi.intact.dataexchange.uniprotexport</groupId>
@@ -15,7 +17,7 @@
     <name>IntAct Data Exchange :: Uniprot Export :: CC/DR Line Export</name>
     <description>IntAct CC/DR line export for UniProt</description>
 
-     <build>
+    <build>
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
@@ -28,19 +30,19 @@
         <dependency>
             <groupId>uk.ac.ebi.intact.core</groupId>
             <artifactId>intact-core</artifactId>
+            <version>1.8.1-SNAPSHOT</version>
         </dependency>
 
         <dependency>
             <groupId>commons-collections</groupId>
             <artifactId>commons-collections</artifactId>
         </dependency>
-     
-        <dependency>
-	    <groupId>commons-cli</groupId>
-	    <artifactId>commons-cli</artifactId>
-	    <version>1.1</version>
-	</dependency>
-    </dependencies>
 
+        <dependency>
+            <groupId>commons-cli</groupId>
+            <artifactId>commons-cli</artifactId>
+            <version>1.1</version>
+        </dependency>
+    </dependencies>
 
 </project>
