Updated intact-core so its availability is not restricted to test scope

--- a/repo/maven-plugins/fasta-maven-plugin/trunk/pom.xml
+++ b/repo/maven-plugins/fasta-maven-plugin/trunk/pom.xml
@@ -28,9 +28,7 @@
     <dependencies>
         <dependency>
             <groupId>uk.ac.ebi.intact.core</groupId>
-            <artifactId>intact-persister</artifactId>
-            <version>1.7.2-SNAPSHOT</version>
-            <scope>test</scope>
+            <artifactId>intact-core</artifactId>
         </dependency>
     </dependencies>
 
