--- a/repo/bridges/trunk/intact-blast/pom.xml
+++ b/repo/bridges/trunk/intact-blast/pom.xml
@@ -2,7 +2,7 @@
 	<parent>
 		<artifactId>bridges-master</artifactId>
 		<groupId>uk.ac.ebi.intact.bridges</groupId>
-		<version>2.0.2</version>
+		<version>2.0.3-SNAPSHOT</version>
 	</parent>
 
 	<modelVersion>4.0.0</modelVersion>
@@ -10,7 +10,7 @@
 	<artifactId>intact-blast</artifactId>
 
 	<name>IntAct Bridges :: Blast</name>
-	<version>2.0.2</version>
+	<version>2.0.3-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<properties>
@@ -116,7 +116,7 @@
 		<dependency>
 			<groupId>uk.ac.ebi.intact.bridges</groupId>
 			<artifactId>blast-mapping-parser</artifactId>
-			<version>2.0.2</version>
+			<version>2.0.3-SNAPSHOT</version>
 		</dependency>
 
 	</dependencies>
