--- a/repo/dbupdate/trunk/intact-proteins-update/pom.xml
+++ b/repo/dbupdate/trunk/intact-proteins-update/pom.xml
@@ -17,6 +17,7 @@
         <dependency>
             <groupId>uk.ac.ebi.intact.dbupdate</groupId>
             <artifactId>intact-biosource-update</artifactId>
+            <version>${pom.version}</version>
         </dependency>
         <dependency>
             <groupId>uk.ac.ebi.intact.bridges</groupId>
