--- a/repo/dbupdate/trunk/update-db-proteins-maven-plugin/pom.xml
+++ b/repo/dbupdate/trunk/update-db-proteins-maven-plugin/pom.xml
@@ -26,6 +26,7 @@
         <dependency>
             <groupId>uk.ac.ebi.intact.dbupdate</groupId>
             <artifactId>intact-proteins-update</artifactId>
+            <version>${pom.version}</version>
         </dependency>
         <dependency>
             <groupId>uk.ac.ebi.intact.core</groupId>
