--- a/repo/dbupdate/tags/dbupdate-master-2.0.0/update-db-proteins-maven-plugin/pom.xml
+++ b/repo/dbupdate/tags/dbupdate-master-2.0.0/update-db-proteins-maven-plugin/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>uk.ac.ebi.intact.dbupdate</groupId>
         <artifactId>dbupdate-master</artifactId>
-        <version>2.0.0-SNAPSHOT</version>
+        <version>2.0.0</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
@@ -14,7 +14,7 @@
     <artifactId>update-db-proteins-maven-plugin</artifactId>
     <packaging>maven-plugin</packaging>
 
-    <version>2.0.0-SNAPSHOT</version>
+    <version>2.0.0</version>
 
     <name>IntAct Database Update :: Plugins :: Proteins Update Plugin</name>
 
