--- a/repo/dbupdate/trunk/intact-proteins-update/src/test/resources/log4j.properties
+++ b/repo/dbupdate/trunk/intact-proteins-update/src/test/resources/log4j.properties
@@ -3,7 +3,7 @@ log4j.rootCategory=INFO, A
 
 
 log4j.category.uk.ac.ebi.intact.util.protein=DEBUG
-log4j.category.uk.ac.ebi.intact.uniprot=DEBUG
+log4j.category.uk.ac.ebi.intact.uniprot=INFO
 log4j.category.uk.ac.ebi.intact.taxonomy=DEBUG
 log4j.category.uk.ac.ebi.intact.util.biosource=DEBUG
 
