--- a/repo/dbupdate/trunk/intact-proteins-update/src/test/resources/log4j.properties
+++ b/repo/dbupdate/trunk/intact-proteins-update/src/test/resources/log4j.properties
@@ -1,6 +1,7 @@
 
 log4j.rootCategory=INFO, A
 
+log4j.category.uk.ac.ebi.intact.dbupdate.prot=TRACE
 
 log4j.category.uk.ac.ebi.intact.util.protein=DEBUG
 log4j.category.uk.ac.ebi.intact.uniprot=INFO
