--- a/repo/dbupdate/trunk/update-db-proteins-maven-plugin/pom.xml
+++ b/repo/dbupdate/trunk/update-db-proteins-maven-plugin/pom.xml
@@ -20,6 +20,7 @@
         <dependency>
             <groupId>uk.ac.ebi.intact.plugins</groupId>
             <artifactId>intact-plugin</artifactId>
+            <version>2.2</version>
         </dependency>
         <dependency>
             <groupId>uk.ac.ebi.intact.dbupdate</groupId>
