--- a/repo/dbupdate/trunk/intact-proteins-update/pom.xml
+++ b/repo/dbupdate/trunk/intact-proteins-update/pom.xml
@@ -25,6 +25,12 @@
         </dependency>
 
         <dependency>
+            <groupId>org.biojava</groupId>
+            <artifactId>biojava</artifactId>
+            <version>1.5</version>
+        </dependency>
+
+        <dependency>
             <groupId>commons-collections</groupId>
             <artifactId>commons-collections</artifactId>
             <version>3.2</version>
