--- a/repo/bridges/trunk/blast-mapping-parser/pom.xml
+++ b/repo/bridges/trunk/blast-mapping-parser/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
 
@@ -20,15 +21,7 @@
 			<plugin>
 				<groupId>com.sun.tools.xjc.maven2</groupId>
 				<artifactId>maven-jaxb-plugin</artifactId>
-				<version>1.0</version>
 
-				<executions>
-					<execution>
-						<goals>
-							<goal>generate</goal>
-						</goals>
-					</execution>
-				</executions>
 				<configuration>
 					<generatePackage>
 						uk.ac.ebi.intact.confidence.blastmapping.jaxb
@@ -42,59 +35,28 @@
 					<verbose>true</verbose>
 				</configuration>
 			</plugin>
-
-			<!-- Assembly -->
-			<plugin>
-				<artifactId>maven-assembly-plugin</artifactId>
-				<configuration>
-					<descriptor>${descriptor}</descriptor>
-				</configuration>
-			</plugin>
-
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-					<source>1.5</source>
-					<target>1.5</target>
-				</configuration>
-			</plugin>
 		</plugins>
 	</build>
 
-
 	<dependencies>
-
-		<!-- Tests -->
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.3.1</version>
-			<scope>test</scope>
-		</dependency>
-
 		<!-- 3rd party -->
 		<dependency>
 			<groupId>commons-logging</groupId>
 			<artifactId>commons-logging</artifactId>
-			<version>1.1</version>
 		</dependency>
 
-		<!-- JAXB related deps -->
+		<!-- JAXB -->
 		<dependency>
 			<groupId>com.sun.xml.bind</groupId>
 			<artifactId>jaxb-impl</artifactId>
-			<version>2.0.1</version>
 		</dependency>
 		<dependency>
 			<groupId>stax</groupId>
 			<artifactId>stax</artifactId>
-			<version>1.2.0</version>
 		</dependency>
 		<dependency>
 			<groupId>javax.xml.bind</groupId>
 			<artifactId>jaxb-api</artifactId>
-			<version>2.0</version>
 		</dependency>
 	</dependencies>
 
@@ -145,28 +107,4 @@
 		</pluginRepository>
 	</pluginRepositories>
 
-	<distributionManagement>
-		<repository>
-			<id>ebi-repo</id>
-			<name>EBI Repository</name>
-			<url>
-				scp://quanea2.ebi.ac.uk/homes/maven/public_html/m2repo
-			</url>
-		</repository>
-
-		<snapshotRepository>
-			<uniqueVersion>false</uniqueVersion>
-			<id>ebi-repo-snapshots</id>
-			<name>EBI Snapshots Repository</name>
-			<url>
-				scp://quanea2.ebi.ac.uk/homes/maven/public_html/m2repo_snapshots
-			</url>
-		</snapshotRepository>
-
-		<site>
-			<id>psimilib-site</id>
-			<name>CV Mapping parser site</name>
-			<url>${site.remote.basedir}/${artifactId}</url>
-		</site>
-	</distributionManagement>
 </project>
