--- a/repo/bridges/trunk/intact-blast/pom.xml
+++ b/repo/bridges/trunk/intact-blast/pom.xml
@@ -105,6 +105,10 @@
 
         <!-- 3rd party -->
         <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+        </dependency>
+        <dependency>
             <groupId>commons-logging</groupId>
             <artifactId>commons-logging</artifactId>
         </dependency>
