--- a/repo/bridges/trunk/intact-uniprot/pom.xml
+++ b/repo/bridges/trunk/intact-uniprot/pom.xml
@@ -5,12 +5,12 @@
     <parent>
         <artifactId>bridges-master</artifactId>
         <groupId>uk.ac.ebi.intact.bridges</groupId>
-        <version>2.0.3</version>
+        <version>2.0.4-SNAPSHOT</version>
     </parent>
 
     <artifactId>intact-uniprot</artifactId>
     <packaging>jar</packaging>
-    <version>2.0.3</version>
+    <version>2.0.4-SNAPSHOT</version>
 
     <name>IntAct Bridges :: Uniprot</name>
 
