--- a/repo/bridges/trunk/intact-uniprot/pom.xml
+++ b/repo/bridges/trunk/intact-uniprot/pom.xml
@@ -34,7 +34,7 @@
         <dependency>
             <groupId>uk.ac.ebi.uniprot.kraken</groupId>
             <artifactId>uniprotjapi</artifactId>
-            <version>(10.5,]</version>
+            <version>13.6</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.springframework</groupId>
@@ -61,12 +61,6 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring</artifactId>
             <version>2.5</version>
-        </dependency>
-
-        <dependency>
-            <groupId>uk.ac.ebi</groupId>
-            <artifactId>sptr</artifactId>
-            <version>(9.0,]</version>
         </dependency>
         
         <!-- Caching techology-->
