--- a/repo/data-exchange/trunk/uniprot-export/intact-uniprot-export/pom.xml
+++ b/repo/data-exchange/trunk/uniprot-export/intact-uniprot-export/pom.xml
@@ -3,14 +3,14 @@
     <parent>
         <groupId>uk.ac.ebi.intact.dataexchange.uniprotexport</groupId>
         <artifactId>uniprot-export</artifactId>
-        <version>2.0.1-SNAPSHOT</version>
+        <version>2.0.1</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>intact-uniprot-export</artifactId>
     <packaging>jar</packaging>
-    <version>2.0.1-SNAPSHOT</version>
+    <version>2.0.1</version>
 
     <name>IntAct Data Exchange :: Uniprot Export :: CC/DR Line Export</name>
     <description>IntAct CC/DR line export for UniProt</description>
