--- a/repo/bridges/trunk/intact-uniprot/pom.xml
+++ b/repo/bridges/trunk/intact-uniprot/pom.xml
@@ -34,7 +34,7 @@
         <dependency>
             <groupId>uk.ac.ebi.uniprot.kraken</groupId>
             <artifactId>uniprotjapi</artifactId>
-            <version>13.6</version>
+            <version>[14,)</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.springframework</groupId>
