--- a/repo/bridges/trunk/intact-blast/pom.xml
+++ b/repo/bridges/trunk/intact-blast/pom.xml
@@ -3,7 +3,7 @@
     <parent>
 		<artifactId>bridges-master</artifactId>
 		<groupId>uk.ac.ebi.intact.bridges</groupId>
-		<version>2.0.6</version>
+		<version>2.0.7-SNAPSHOT</version>
 	</parent>
 
 	<modelVersion>4.0.0</modelVersion>
@@ -11,7 +11,7 @@
 	<artifactId>intact-blast</artifactId>
 
 	<name>IntAct Bridges :: Blast</name>
-	<version>2.0.6</version>
+	<version>2.0.7-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<properties>
@@ -57,7 +57,7 @@
         <dependency>
             <groupId>uk.ac.ebi.intact.bridges</groupId>
             <artifactId>blast-mapping-parser</artifactId>
-            <version>2.0.6</version>
+            <version>2.0.7-SNAPSHOT</version>
         </dependency>
         
         <!-- Axis -->
