1) Updated new CC line format according to SP's comments 2) use the old format in the export up until SP is ready to take the data

--- a/repo/data-exchange/trunk/uniprot-export/intact-uniprot-export/src/test/resources/log4j.properties
+++ b/repo/data-exchange/trunk/uniprot-export/intact-uniprot-export/src/test/resources/log4j.properties
@@ -1,13 +1,13 @@
 
-log4j.rootCategory=DEBUG, A
+log4j.rootCategory=WARN, A
 
-log4j.category.uk.ac.ebi.intact=DEBUG
-log4j.category.uk.ac.ebi.intact.persistence.util=DEBUG
-log4j.category.uk.ac.ebi.intact.persistence.dao.IntactTransaction=INFO
+log4j.category.uk.ac.ebi.intact=WARN
+log4j.category.uk.ac.ebi.intact.persistence.util=WARN
+log4j.category.uk.ac.ebi.intact.persistence.dao.IntactTransaction=WARN
 log4j.category.uk.ac.ebi.intact.model.IntactIdGenerator=INFO
-log4j.category.uk.ac.ebi.intact.model.IntactObjectEventListener=DEBUG
-log4j.category.uk.ac.ebi.intact.config.impl.AbstractHibernateDataConfig=DEBUG
-log4j.category.uk.ac.ebi.intact.context.impl.WebappSession=INFO
+log4j.category.uk.ac.ebi.intact.model.IntactObjectEventListener=WARN
+log4j.category.uk.ac.ebi.intact.config.impl.AbstractHibernateDataConfig=WARN
+log4j.category.uk.ac.ebi.intact.context.impl.WebappSession=WARN
 log4j.category.uk.ac.ebi.intact.context.CvContext=WARN
 
 log4j.category.org.apache=INFO
